--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@schematics/angular": "^15.1.3",
     "bootstrap": "^5.2.3",
+    "moment": "^2.29.4",
     "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
