--- a/angular.json
+++ b/angular.json
@@ -26,14 +26,11 @@
               "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.css",
-              "node_modules/@fortawesome/fontawesome-free/css/fontawesome.css",
-              "node_modules/@fortawesome/fontawesome-free/css/thin.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/@fortawesome/fontawesome-free/js/fontawesome.js",
-              "node_modules/@fortawesome/fontawesome-free/js/thin.js"
+              "node_modules/@fortawesome/fontawesome-free/js/all.min.js"
             ]
           },
           "configurations": {
